# Lifefit

./: .readthedocs.yml  404.html  CHANGELOG.md  MANIFEST.in  README.md  abstract.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements  requirements.txt  setup.py  sitemap.xml
.github/workflows/: build.yml  create_release.yml  docs.yml  heroku_deploy.yml  lifefit_build.yml  pypi_upload.yml  release.yml
api/: index.html
app/: Dockerfile  app.py  requirements.txt
data/anisotropy/: HV.txt  VV.txt
docs/: api.md  index.md  requirements.txt  tutorial.ipynb
docs/source/: conf.py  index.rst  lifefit.rst  modules.rst
docs/source/tutorial/: lifefit_tutorial.ipynb
docs/source/tutorial/data/lifetime/: Atto550_DNA.txt
lifefit/: __about__.py  __init__.py  tcspc.py
search/: search_index.json
src/lifefit/: __init__.py  gui.py  tcspc.py
src/lifefit/app/: app.py
src/lifefit/data/IRF/: irf.txt  irf_time_intensity.txt  irf_time_intensity_normalized.txt
src/lifefit/data/anisotropy/: HH.txt  VH.txt
src/lifefit/data/lifetime/: Atto550_DNA_time_intensity.txt  Atto550_DNA_time_intensity_normalized.txt
tests/: test_tcspc.py  tests.py
tests/testdata/: missing_header.txt  missing_timestep.txt
tutorial/: index.html
