[tool.poetry]
name = "Lifefit"
version = "1.0.8"
description = "Reconvolution fitting of time-correlated single-photon (TCPSC) data"
authors = [
    "Fabio Steffen <fabio.steffen@chem.uzh.ch>", 
    "Roland K.O. Sigel <roland.sigel@chem.uzh.ch>", 
    "Richard Börner <richard.boerner@hs-mittweida.de>"]
maintainers = ["Fabio Steffen <fabio.steffen@chem.uzh.ch>"]
license = "MIT"
readme = "README.md"
homepage = "https://rna-fretools.github.io/"
repository = "https://github.com/RNA-FRETools/lifefit"
documentation = "https://rna-fretools.github.io/lifefit"
keywords = ["TCSPC", "fluorescence"]
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.0.0"
scipy = "^1.14.0"
uncertainties = "^3.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
requests = "^2.32.3"
streamlit = "^1.36.0"
plotly = "^5.22.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.29"
mkdocs-jupyter = "^0.24.8"

[tool.poetry.group.dev.dependencies]
bumpver = "^2023.1129"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lifefit_gui = "lifefit.gui:main"

[tool.black]
line-length = 120

[tool.bumpver]
current_version = "1.0.8"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"$',
]